# termos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
icons/: icon.icns
rust_version/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE
rust_version/.github/workflows/: ci.yml
src/: App.tsx  lib.rs  main.rs  style.css
src/components/: Button.tsx  CommandParameterModal.tsx  ContextMenu.tsx  ContextMenuContainer.tsx  ContextMenuItem.tsx  Divider.tsx  FormGroup.tsx  FormInput.tsx  FormLabel.tsx  InfoText.tsx  Modal.tsx  ModalActions.tsx  ModalContainer.tsx  ModalOverlay.tsx  Sidebar.tsx  TabBar.tsx  TabBarContainer.tsx  TabContainer.tsx  TabTitle.tsx  Terminal.tsx  TerminalContainer.tsx  TerminalInstance.tsx  index.tsx
src/hooks/: useLocalStorage.ts
src/layouts/: Sidebar.tsx
src/utils/: commandTemplate.ts
src/views/: CommandPalette.tsx  CommandParameterModal.tsx  ContextMenu.tsx  Divider.tsx  Modal.tsx  TabBar.tsx  Terminal.tsx  index.tsx
