[package]
name = "termos-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tauri = { version = "1.5", features = ["api-all"] }
portable-pty = "0.8"
tokio = { version = "1.35", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[lib]
name = "termos"
path = "src/lib.rs"
